--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -1,11 +1,15 @@
 ScopeScreen As screen:
+    OnVisible: |-
+        =If(IsBlank(intxtScope),Set(VarScope,false));
+        If(IsBlank(IntxtScopeofwork),Set(VarScopeofwork,false));
+        If(IsBlank(IntxtManuallyScopeofwork),Set(VarCustomScopeofwork,false));
 
     ctnMainSS As groupContainer.verticalAutoLayoutContainer:
         Fill: =RGBA(237, 237, 237, 1)
         Height: =Parent.Height
         LayoutAlignItems: =LayoutAlignItems.Stretch
         LayoutDirection: =LayoutDirection.Vertical
-        LayoutGap: =20
+        LayoutGap: =10
         LayoutMode: =LayoutMode.Auto
         LayoutOverflowY: =LayoutOverflow.Scroll
         PaddingLeft: =10
@@ -69,8 +73,8 @@ ScopeScreen As screen:
                 PaddingTop: =5.34
                 Size: |
                     =//21.36
-                    If(Parent.Width<500,12,Parent.Width>500,18)
-                Text: =" Lead Generation"
+                    If(Parent.Width<500,14,Parent.Width>500,18)
+                Text: ="Technician Lead Generation"
                 Width: =Parent.Width-imgSchindlerLogoSS.Width-iconBackSS.Width-btnuserSS.Width-20
                 X: =96.12
                 ZIndex: =6
@@ -122,10 +126,10 @@ ScopeScreen As screen:
                 Font: =Font.Arial
                 Height: =Parent.Height
                 PaddingBottom: =0
-                PaddingLeft: =100
+                PaddingLeft: =20
                 PaddingRight: =20
                 PaddingTop: =0
-                Size: =If(Parent.Width<500,16,Parent.Width>500,22,18)
+                Size: =If(Parent.Width<500,16,Parent.Width>500,20,18)
                 Text: ="Create New Lead"
                 Width: =Parent.Width
                 ZIndex: =1
@@ -148,7 +152,7 @@ ScopeScreen As screen:
             AlignInContainer: =AlignInContainer.SetByContainer
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
-            Height: =Parent.Height-ctnHeaderSS.Height-ctnUserHeaderSS.Height-60
+            Height: =Parent.Height-ctnHeaderSS.Height-ctnUserHeaderSS.Height-30
             LayoutAlignItems: =LayoutAlignItems.Center
             LayoutDirection: =LayoutDirection.Vertical
             LayoutMinHeight: =Parent.Height-ctnHeaderSS.Height-ctnUserHeaderSS.Height
@@ -170,47 +174,47 @@ ScopeScreen As screen:
                 ZIndex: =1
 
                 IconLine1CL_2 As icon.HorizontalLine:
-                    Color: =Color.DarkGray
+                    Color: =RGBA(202, 202, 202, 1)
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
                         If(Parent.Width<378,Parent.Width/10,Parent.Width<500,Parent.Width/12,Parent.Width/14)
                     X: =Image1_10.X+Image1_10.Width
-                    Y: =If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/6,(Parent.Height-Self.Height)/3)
+                    Y: =If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =8
 
                 IconLine2CL_2 As icon.HorizontalLine:
-                    Color: =Color.DarkGray
+                    Color: =RGBA(202, 202, 202, 1)
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
                         If(Parent.Width<378,Parent.Width/10,Parent.Width<500,Parent.Width/12,Parent.Width/14)
                     X: =Image1_12.X+Image1_12.Width
-                    Y: =If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/6,(Parent.Height-Self.Height)/3)
+                    Y: =If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =9
 
                 IconLine3CL_2 As icon.HorizontalLine:
-                    Color: =Color.DarkGray
+                    Color: =RGBA(202, 202, 202, 1)
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
                         If(Parent.Width<378,Parent.Width/10,Parent.Width<500,Parent.Width/12,Parent.Width/14)
                     X: =Image1_13.X+Image1_13.Width
-                    Y: =If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/6,(Parent.Height-Self.Height)/3)
+                    Y: =If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =10
 
                 IconLine4CL_2 As icon.HorizontalLine:
-                    Color: =Color.DarkGray
+                    Color: =RGBA(202, 202, 202, 1)
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
                         If(Parent.Width<378,Parent.Width/10,Parent.Width<500,Parent.Width/12,Parent.Width/14)
                     X: =Image1_14.X+Image1_14.Width
-                    Y: =If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/6,(Parent.Height-Self.Height)/3)
+                    Y: =If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =11
 
                 lblStep1CL_2 As label:
@@ -570,7 +574,7 @@ ScopeScreen As screen:
                     DisplayMode: =Parent.DisplayMode
                     DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_PrimaryScopeofWorkLID")
                     Fill: =RGBA(0, 0, 0, 0)
-                    Height: =110
+                    Height: =50
                     Required: =false
                     Update: =intxtScope.Selected
                     Width: =Parent.Width
@@ -583,7 +587,7 @@ ScopeScreen As screen:
                         Color: =RGBA(0, 0, 0, 1)
                         Font: =Font.Arial
                         Height: =If(VarScope,48,0)
-                        Size: =If(Parent.Width<358,14,Parent.Width>358,16,14)
+                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                         Text: |-
                             =//Parent.DisplayName
                             "Scope"
@@ -591,6 +595,7 @@ ScopeScreen As screen:
                         Width: =Parent.Width - 60
                         Wrap: =false
                         X: =30
+                        Y: =10
                         ZIndex: =1
 
                     intxtScope As combobox:
@@ -656,7 +661,7 @@ ScopeScreen As screen:
                     DisplayMode: =Parent.DisplayMode
                     DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_PrimaryScopeofWorkLID")
                     Fill: =RGBA(0, 0, 0, 0)
-                    Height: =110
+                    Height: =50
                     Required: =false
                     Update: =IntxtScopeofwork.Selected
                     Width: =Parent.Width
@@ -689,6 +694,7 @@ ScopeScreen As screen:
                         Font: =Font.Arial
                         Height: =50
                         HoverFill: =RGBA(0, 0, 0, 0)
+                        InputTextPlaceholder: ="Search Scope of Work"
                         Items: =Filter(SecondaryScopeofWorks,PrimaryScopeofWorkLID.'PrimaryScopeofWorkName '=intxtScope.Selected.'PrimaryScopeofWorkName ')
                         OnChange: =Set(VarScopeofwork,true)
                         PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
@@ -751,9 +757,10 @@ ScopeScreen As screen:
                         AutoHeight: =true
                         Color: =RGBA(0, 0, 0, 1)
                         Font: =Font.Arial
-                        Height: =48
+                        Height: =If(VarCustomScopeofwork,48,0)
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                         Text: ="Custom Scope of work(Manually Entered)"
+                        Visible: =VarCustomScopeofwork
                         Width: =Parent.Width - 60
                         X: =30
                         Y: =10
@@ -765,11 +772,13 @@ ScopeScreen As screen:
                         DelayOutput: =true
                         DisplayMode: =Parent.DisplayMode
                         Font: =Font.Arial
-                        Height: =50
+                        Height: =100
                         HintText: ="Custom Scope of work(Manually Entered)"
                         HoverBorderColor: =RGBA(202, 202, 202, 1)
                         HoverFill: =RGBA(0, 0, 0, 0)
                         MaxLength: =Parent.MaxLength
+                        Mode: =TextMode.MultiLine
+                        OnChange: =Set(VarCustomScopeofwork,true)
                         PaddingLeft: =5
                         RadiusBottomLeft: =0
                         RadiusBottomRight: =0
@@ -828,7 +837,9 @@ ScopeScreen As screen:
                 ZIndex: =4
 
                 btnPreviousSS As button:
-                    Fill: =RGBA(255, 0, 0, 1)
+                    BorderColor: =ColorFade(Self.Color, -15%)
+                    Color: =RGBA(255, 0, 0, 1)
+                    Fill: =RGBA(255, 255, 255, 1)
                     Font: =Font.Arial
                     HoverFill: =Color.Red
                     OnSelect: |+
